--- a/indexes/nsc1035/52.md
+++ b/indexes/nsc1035/52.md
@@ -1,5 +1,7 @@
 ### 纪元评论：感悟随笔
 ---
+#### [王瑞雅：《面试》影评——生命中真正的贵人](../../pages/nsc1035/n13260528.md) 
+#### [达温：为什么中共领导下的中国看不到“英雄男孩”？](../../pages/nsc1035/n13257099.md) 
 #### [李思仪：每个中国人心里都有一部强拆血泪史](../../pages/nsc1035/n13249632.md) 
 #### [林青：又到中秋月圆时 多少游子泪湿襟](../../pages/nsc1035/n13245916.md) 
 #### [《抓捕》影评：危难关头，敢不敢拔刀相助](../../pages/nsc1035/n13244251.md) 
@@ -28,8 +30,6 @@
 #### [清竹：著名歌唱家关贵敏的故事](../../pages/nsc1035/n13025435.md) 
 #### [影评：英雄的壮举（上）](../../pages/nsc1035/n13024688.md) 
 #### [李疏影：不能忘却的抗争，和走下去的希望](../../pages/nsc1035/n13022097.md) 
-#### [李田田：减压式生活未必就是消极堕落，由国之大考所想到的](../../pages/nsc1035/n13017621.md) 
-#### [教育家为何担心个人主义衰败胜过原子弹？](../../pages/nsc1035/n13002969.md) 
 
 ---
 #### 第 [ [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) ] 页
