--- a/indexes/nsc1028/56.md
+++ b/indexes/nsc1028/56.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [王友群：马寅初被批判 至少4.5亿胎儿被杀](../../pages/nsc1028/n13260313.md) 
 #### [【网海拾贝】港府以危害国安为名已拘捕153港人](../../pages/nsc1028/n13257369.md) 
 #### [中共是怎么为自己涂脂抹粉的（1）](../../pages/nsc1028/n13257311.md) 
 #### [袁斌：我们从小到大学到的历史哪些是假的（10）](../../pages/nsc1028/n13252177.md) 
@@ -29,7 +30,6 @@
 #### [吴明：中共历届“克格勃”的命运（下）](../../pages/nsc1028/n13200899.md) 
 #### [吴明：中共历届“克格勃”的命运（上）](../../pages/nsc1028/n13198300.md) 
 #### [百年红祸 中华“亡国”](../../pages/nsc1028/n13192762.md) 
-#### [袁斌：我们从小到大学到的历史哪些是假的（3）](../../pages/nsc1028/n13193945.md) 
 
 ---
 #### 第 [ [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) ] 页
