--- a/indexes/nsc993/63.md
+++ b/indexes/nsc993/63.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】中共开启了危险的“国际绑票” 时代](../../pages/nsc993/n13265851.md) 
 #### [扬箭：李子柒在乡村跌了一跤，把网红摔得头破血流](../../pages/nsc993/n13263133.md) 
 #### [【网海拾贝】孟晚舟回国第一时间向习近平表忠](../../pages/nsc993/n13263071.md) 
 #### [李明：疫苗不能控制疫情 自救是出路](../../pages/nsc993/n13262613.md) 
@@ -29,7 +30,6 @@
 #### [唐付民：浅谈“什么是政治？”](../../pages/nsc993/n13228720.md) 
 #### [【网海拾贝】六四屠城该不该追究？](../../pages/nsc993/n13227648.md) 
 #### [大成漫画：没娘月不圆](../../pages/nsc993/n13227737.md) 
-#### [东川子：中国人，你为什么不反抗](../../pages/nsc993/n13225723.md) 
 
 ---
 #### 第 [ [63](./63.md) / [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) ] 页
