have a nice day!

--- a/indexes/nsc1035/52.md
+++ b/indexes/nsc1035/52.md
@@ -1,5 +1,6 @@
 ### 纪元评论：感悟随笔
 ---
+#### [心若向阳，无惧风霜——观影片《意外》有感](../../pages/nsc1035/n13275318.md) 
 #### [王瑞雅：电影《抉择》带给台商的启示](../../pages/nsc1035/n13274064.md) 
 #### [王瑞雅：《面试》影评——生命中真正的贵人](../../pages/nsc1035/n13260528.md) 
 #### [达温：为什么中共领导下的中国看不到“英雄男孩”？](../../pages/nsc1035/n13257099.md) 
@@ -29,7 +30,6 @@
 #### [影评：英雄的壮举（下）](../../pages/nsc1035/n13027438.md) 
 #### [影评：英雄的壮举（中）](../../pages/nsc1035/n13027244.md) 
 #### [清竹：著名歌唱家关贵敏的故事](../../pages/nsc1035/n13025435.md) 
-#### [影评：英雄的壮举（上）](../../pages/nsc1035/n13024688.md) 
 
 ---
 #### 第 [ [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) ] 页
