have a nice day!

--- a/indexes/nsc1025/136.md
+++ b/indexes/nsc1025/136.md
@@ -1,5 +1,8 @@
 ### 纪元评论：时政评论
 ---
+#### [周晓辉：孙力军移送司法后傅政华被查 是巧合？](../../pages/nsc1025/n13277809.md) 
+#### [田云：河北医生被监狱害死 中共政法系添新罪](../../pages/nsc1025/n13277509.md) 
+#### [辛明：潍坊9名政法官员落马 7人干了同一件事](../../pages/nsc1025/n13277656.md) 
 #### [沈舟：潜艇的威力远比你想像的更大（上）](../../pages/nsc1025/n13277522.md) 
 #### [王友群：傅政华孙力军的后台老板或被抓](../../pages/nsc1025/n13277204.md) 
 #### [【名家专栏】没有真相 就谈不上违法](../../pages/nsc1025/n13276564.md) 
@@ -27,9 +30,6 @@
 #### [扬箭：孟晚舟经历告诉小粉红们 离党远一点](../../pages/nsc1025/n13272831.md) 
 #### [沈舟：珠海航空展的中共山寨军机（多图）](../../pages/nsc1025/n13272514.md) 
 #### [【名家专栏】停止“围堵”抗拒新冠疫苗者](../../pages/nsc1025/n13271770.md) 
-#### [【名家专栏】“蜘蛛龙”统治世界的长期目标](../../pages/nsc1025/n13271843.md) 
-#### [周晓辉：孙力军有政治野心 官方严厉措辞后藏秘密](../../pages/nsc1025/n13272254.md) 
-#### [【名家专栏】中共收买全球媒体对活摘器官噤声](../../pages/nsc1025/n13271659.md) 
 
 ---
-#### 第 [ [135](./135.md) / [134](./134.md) / [133](./133.md) / [132](./132.md) / [131](./131.md) / [130](./130.md) / [129](./129.md) / [128](./128.md) ] 页
+#### 第 [ [136](./136.md) / [135](./135.md) / [134](./134.md) / [133](./133.md) / [132](./132.md) / [131](./131.md) / [130](./130.md) / [129](./129.md) ] 页
