--- a/indexes/nsc993/63.md
+++ b/indexes/nsc993/63.md
@@ -1,5 +1,8 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】中共国应该叫“中华共产权贵国”](../../pages/nsc993/n13277732.md) 
+#### [赵家人为什么要把孩子送到美国？](../../pages/nsc993/n13277707.md) 
+#### [理悟：“十一”感怀（五首）](../../pages/nsc993/n13277203.md) 
 #### [【网海拾贝】孙力军私藏了什么“涉密材料”？](../../pages/nsc993/n13276325.md) 
 #### [白丁：孟晚舟获释，几家欢喜几家愁？](../../pages/nsc993/n13276158.md) 
 #### [郑纯清：而今最危险的是中共——应“台湾很危险”之说](../../pages/nsc993/n13276137.md) 
@@ -27,9 +30,6 @@
 #### [【网海拾贝】天安门前的黑天鹅原来叫“恒大”](../../pages/nsc993/n13259800.md) 
 #### [“大家还看好中共或者中国的未来吗？”](../../pages/nsc993/n13259590.md) 
 #### [【网海拾贝】港府以危害国安为名已拘捕153港人](../../pages/nsc993/n13257369.md) 
-#### [【网海拾贝】美空军部长演讲30分钟27次提中共](../../pages/nsc993/n13254918.md) 
-#### [“国家的自愿接种疫苗就是说漂亮话而已”](../../pages/nsc993/n13254862.md) 
-#### [【网海拾贝】互联网自由度中国连续七年垫底](../../pages/nsc993/n13252244.md) 
 
 ---
 #### 第 [ [63](./63.md) / [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) ] 页
