--- a/indexes/nsc1028/56.md
+++ b/indexes/nsc1028/56.md
@@ -1,5 +1,9 @@
 ### 纪元评论：以史为鉴
 ---
+#### [中共之无法 皆因其无天](../../pages/nsc1028/n13281088.md) 
+#### [王友群：为何毛泽东点名粟裕是军中“坏人”？](../../pages/nsc1028/n13279118.md) 
+#### [川人：长津湖之战 中国人究竟替谁在打仗？](../../pages/nsc1028/n13279096.md) 
+#### [别被史诗大片忽悠 长津湖战役惨绝人寰的真相](../../pages/nsc1028/n13279023.md) 
 #### [王友群：马寅初被批判 至少4.5亿胎儿被杀](../../pages/nsc1028/n13260313.md) 
 #### [【网海拾贝】港府以危害国安为名已拘捕153港人](../../pages/nsc1028/n13257369.md) 
 #### [中共是怎么为自己涂脂抹粉的（1）](../../pages/nsc1028/n13257311.md) 
@@ -26,10 +30,6 @@
 #### [袁斌：我们从小到大学到的历史哪些是假的（5）](../../pages/nsc1028/n13209835.md) 
 #### [告别进化论](../../pages/nsc1028/n13196066.md) 
 #### [林辉：真“双枪老太婆”抗日反共 中共混淆视听](../../pages/nsc1028/n13208826.md) 
-#### [袁斌：我们从小到大学到的历史哪些是假的（4）](../../pages/nsc1028/n13204742.md) 
-#### [吴明：中共历届“克格勃”的命运（下）](../../pages/nsc1028/n13200899.md) 
-#### [吴明：中共历届“克格勃”的命运（上）](../../pages/nsc1028/n13198300.md) 
-#### [百年红祸 中华“亡国”](../../pages/nsc1028/n13192762.md) 
 
 ---
 #### 第 [ [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) ] 页
