--- a/indexes/nsc993/63.md
+++ b/indexes/nsc993/63.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [农民工的黄金周是对社会主义优越性的讽刺](../../pages/nsc993/n13279129.md) 
+#### [【网海拾贝】共产党的圈套](../../pages/nsc993/n13279355.md) 
 #### [【网海拾贝】中共国应该叫“中华共产权贵国”](../../pages/nsc993/n13277732.md) 
 #### [赵家人为什么要把孩子送到美国？](../../pages/nsc993/n13277707.md) 
 #### [理悟：“十一”感怀（五首）](../../pages/nsc993/n13277203.md) 
@@ -28,8 +30,6 @@
 #### [理悟：又临十一国殇日（二首）](../../pages/nsc993/n13262525.md) 
 #### [【网海拾贝】孟晚舟获释代表美国会放过华为吗？](../../pages/nsc993/n13260990.md) 
 #### [【网海拾贝】天安门前的黑天鹅原来叫“恒大”](../../pages/nsc993/n13259800.md) 
-#### [“大家还看好中共或者中国的未来吗？”](../../pages/nsc993/n13259590.md) 
-#### [【网海拾贝】港府以危害国安为名已拘捕153港人](../../pages/nsc993/n13257369.md) 
 
 ---
 #### 第 [ [63](./63.md) / [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) ] 页
