--- a/indexes/nsc993/64.md
+++ b/indexes/nsc993/64.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】中共每天都在上演绞肉连续剧](../../pages/nsc993/n13282662.md) 
 #### [“自干五”和“小粉红”的觉醒心路（1）](../../pages/nsc993/n13282577.md) 
 #### [农民工的黄金周是对社会主义优越性的讽刺](../../pages/nsc993/n13279129.md) 
 #### [【网海拾贝】共产党的圈套](../../pages/nsc993/n13279355.md) 
@@ -29,7 +30,6 @@
 #### [【网海拾贝】孟晚舟回国第一时间向习近平表忠](../../pages/nsc993/n13263071.md) 
 #### [李明：疫苗不能控制疫情 自救是出路](../../pages/nsc993/n13262613.md) 
 #### [理悟：又临十一国殇日（二首）](../../pages/nsc993/n13262525.md) 
-#### [【网海拾贝】孟晚舟获释代表美国会放过华为吗？](../../pages/nsc993/n13260990.md) 
 
 ---
-#### 第 [ [63](./63.md) / [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) ] 页
+#### 第 [ [64](./64.md) / [63](./63.md) / [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) ] 页
