have a nice day!

--- a/indexes/nsc1025/136.md
+++ b/indexes/nsc1025/136.md
@@ -1,5 +1,12 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】中共在全球破坏公民自由](../../pages/nsc1025/n13285699.md) 
+#### [副部级官员正国级罪名 孙力军到底犯了什么事？](../../pages/nsc1025/n13284906.md) 
+#### [魏京生：病毒的秘密能永远保密吗？](../../pages/nsc1025/n13284832.md) 
+#### [石铭：迫害法轮功中的两大“酷吏”](../../pages/nsc1025/n13284739.md) 
+#### [郝平：百余架次战机扰台 透中共五大“内虚”](../../pages/nsc1025/n13284076.md) 
+#### [王赫：拜登政府对华贸易政策需考虑两大问题](../../pages/nsc1025/n13283797.md) 
+#### [王友群：中共拒澳洲优质煤的九个反效应](../../pages/nsc1025/n13283842.md) 
 #### [【名家专栏】不能为气候变化而背叛人权](../../pages/nsc1025/n13280640.md) 
 #### [周晓辉：北京冬奥会措施严苛 为防疫亦有政治考量](../../pages/nsc1025/n13283655.md) 
 #### [【名家专栏】中共大外宣瞄准海外华人](../../pages/nsc1025/n13283267.md) 
@@ -23,13 +30,6 @@
 #### [沈舟：潜艇的威力远比你想像的更大（上）](../../pages/nsc1025/n13277522.md) 
 #### [王友群：傅政华孙力军的后台老板或被抓](../../pages/nsc1025/n13277204.md) 
 #### [【名家专栏】没有真相 就谈不上违法](../../pages/nsc1025/n13276564.md) 
-#### [【名家专栏】中国房地产崩溃恐毁全球经济吗？](../../pages/nsc1025/n13276553.md) 
-#### [【名家专栏】保留美国历史的重要性](../../pages/nsc1025/n13276548.md) 
-#### [田云：傅政华被查 四名公安副部长落马非偶然](../../pages/nsc1025/n13276245.md) 
-#### [郝平：中共误判美国 再遭围堵转圜无路](../../pages/nsc1025/n13276404.md) 
-#### [觅真：是谁造成了他们月圆家难圆？](../../pages/nsc1025/n13275957.md) 
-#### [田云：四大新闻事件打脸中共“爱国主义”](../../pages/nsc1025/n13275538.md) 
-#### [【方菲访谈】专访桑普: 美中关系与印太局势](../../pages/nsc1025/n13275473.md) 
 
 ---
 #### 第 [ [136](./136.md) / [135](./135.md) / [134](./134.md) / [133](./133.md) / [132](./132.md) / [131](./131.md) / [130](./130.md) / [129](./129.md) ] 页
