have a nice day!

--- a/indexes/nsc1028/56.md
+++ b/indexes/nsc1028/56.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [无神论统御的基督教王国](../../pages/nsc1028/n13281280.md) 
 #### [中共之无法 皆因其无天](../../pages/nsc1028/n13281088.md) 
 #### [王友群：为何毛泽东点名粟裕是军中“坏人”？](../../pages/nsc1028/n13279118.md) 
 #### [川人：长津湖之战 中国人究竟替谁在打仗？](../../pages/nsc1028/n13279096.md) 
@@ -29,7 +30,6 @@
 #### [王友群：中共高级特工潘汉年被监禁至死之谜](../../pages/nsc1028/n13210760.md) 
 #### [袁斌：我们从小到大学到的历史哪些是假的（5）](../../pages/nsc1028/n13209835.md) 
 #### [告别进化论](../../pages/nsc1028/n13196066.md) 
-#### [林辉：真“双枪老太婆”抗日反共 中共混淆视听](../../pages/nsc1028/n13208826.md) 
 
 ---
 #### 第 [ [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) ] 页
