--- a/indexes/nsc993/64.md
+++ b/indexes/nsc993/64.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [党校教授：大数据帮不上计划经济什么忙](../../pages/nsc993/n13287648.md) 
 #### [《长津湖》：抗日神剧2021高清版](../../pages/nsc993/n13284959.md) 
 #### [【网海拾贝】国人的日常生活和治安被一帮罪犯管着](../../pages/nsc993/n13285024.md) 
 #### [海奥华：写给还没“三退”的同胞们](../../pages/nsc993/n13284718.md) 
@@ -29,7 +30,6 @@
 #### [陆言：从一个普通新疆家庭的经历，窥知极权政权之邪恶](../../pages/nsc993/n13271104.md) 
 #### [【网海拾贝】媒体有责任揭中共活摘器官的真相](../../pages/nsc993/n13268717.md) 
 #### [评两岸停电玩双标 胡锡进遭网友打脸](../../pages/nsc993/n13268541.md) 
-#### [【网海拾贝】中共开启了危险的“国际绑票” 时代](../../pages/nsc993/n13265851.md) 
 
 ---
 #### 第 [ [64](./64.md) / [63](./63.md) / [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) ] 页
