--- a/indexes/nsc1026/51.md
+++ b/indexes/nsc1026/51.md
@@ -1,5 +1,6 @@
 ### 纪元评论：财经评论
 ---
+#### [【财经话题】供应链瓶颈若纾解 滞胀就不会来](../../pages/nsc1026/n13286759.md) 
 #### [何冰：恒大系股价大涨，是否迎来转机？](../../pages/nsc1026/n13276822.md) 
 #### [【美股瞭望】美债殖利率飙升引科技估值下调](../../pages/nsc1026/n13267775.md) 
 #### [程晓农：中国房地产业的多米诺骨牌效应](../../pages/nsc1026/n13259673.md) 
@@ -29,7 +30,6 @@
 #### [【美股瞭望】纳指或再度创高 居高仍应思危](../../pages/nsc1026/n12878350.md) 
 #### [【美股瞭望】美债和美元有序攀高无碍牛市](../../pages/nsc1026/n12844459.md) 
 #### [【财经话题】美元悄悄上涨意味着什么？](../../pages/nsc1026/n12798222.md) 
-#### [数据派：中国资产预警之汇率崩塌](../../pages/nsc1026/n12774242.md) 
 
 ---
 #### 第 [ [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) / [44](./44.md) ] 页
