--- a/indexes/nsc993/64.md
+++ b/indexes/nsc993/64.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [前大陆警察曝光中共迫害维族人酷刑细节](../../pages/nsc993/n13290422.md) 
+#### [【网海拾贝】傅政华睡不着觉的根本原因](../../pages/nsc993/n13287736.md) 
 #### [党校教授：大数据帮不上计划经济什么忙](../../pages/nsc993/n13287648.md) 
 #### [《长津湖》：抗日神剧2021高清版](../../pages/nsc993/n13284959.md) 
 #### [【网海拾贝】国人的日常生活和治安被一帮罪犯管着](../../pages/nsc993/n13285024.md) 
@@ -28,8 +30,6 @@
 #### [袁斌：关于孟晚舟回国任正非没接机的对话](../../pages/nsc993/n13271186.md) 
 #### [【网海拾贝】孟晚舟徒有英雄虚名 康明凯尽显爱国真谛](../../pages/nsc993/n13271234.md) 
 #### [陆言：从一个普通新疆家庭的经历，窥知极权政权之邪恶](../../pages/nsc993/n13271104.md) 
-#### [【网海拾贝】媒体有责任揭中共活摘器官的真相](../../pages/nsc993/n13268717.md) 
-#### [评两岸停电玩双标 胡锡进遭网友打脸](../../pages/nsc993/n13268541.md) 
 
 ---
 #### 第 [ [64](./64.md) / [63](./63.md) / [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) ] 页
