--- a/indexes/nsc1028/56.md
+++ b/indexes/nsc1028/56.md
@@ -1,5 +1,7 @@
 ### 纪元评论：以史为鉴
 ---
+#### [王友群：中国的功臣 中共的囚徒](../../pages/nsc1028/n13291790.md) 
+#### [林辉：“李玉和”原型文革被从六楼扔下摔死](../../pages/nsc1028/n13291564.md) 
 #### [中共罪行录之五十四：中国人失去的自由权利](../../pages/nsc1028/n13290123.md) 
 #### [无神论统御的基督教王国](../../pages/nsc1028/n13281280.md) 
 #### [中共之无法 皆因其无天](../../pages/nsc1028/n13281088.md) 
@@ -28,8 +30,6 @@
 #### [袁斌：我们从小到大学到的历史哪些是假的（6）](../../pages/nsc1028/n13221126.md) 
 #### [中共罪行录之五十：同仁堂的故事](../../pages/nsc1028/n13218798.md) 
 #### [中共罪行录之四十九：川大最后一个“右派”](../../pages/nsc1028/n13216206.md) 
-#### [王友群：中共高级特工潘汉年被监禁至死之谜](../../pages/nsc1028/n13210760.md) 
-#### [袁斌：我们从小到大学到的历史哪些是假的（5）](../../pages/nsc1028/n13209835.md) 
 
 ---
 #### 第 [ [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) ] 页
