--- a/indexes/nsc993/64.md
+++ b/indexes/nsc993/64.md
@@ -1,5 +1,8 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】制度才是最大的国情](../../pages/nsc993/n13292455.md) 
+#### [大陆教授：“爱国不需要理由”非常可疑](../../pages/nsc993/n13292404.md) 
+#### [【网海拾贝】习近平政权安全的威胁主要来自内部？](../../pages/nsc993/n13290496.md) 
 #### [前大陆警察曝光中共迫害维族人酷刑细节](../../pages/nsc993/n13290422.md) 
 #### [【网海拾贝】傅政华睡不着觉的根本原因](../../pages/nsc993/n13287736.md) 
 #### [党校教授：大数据帮不上计划经济什么忙](../../pages/nsc993/n13287648.md) 
@@ -27,9 +30,6 @@
 #### [讽刺东北限电 推友编《卖火柴的东北人》](../../pages/nsc993/n13273892.md) 
 #### [郑纯清：而今最危险的是中共](../../pages/nsc993/n13272870.md) 
 #### [理悟：感叹福州市公安局长潘东升猝死](../../pages/nsc993/n13272713.md) 
-#### [袁斌：关于孟晚舟回国任正非没接机的对话](../../pages/nsc993/n13271186.md) 
-#### [【网海拾贝】孟晚舟徒有英雄虚名 康明凯尽显爱国真谛](../../pages/nsc993/n13271234.md) 
-#### [陆言：从一个普通新疆家庭的经历，窥知极权政权之邪恶](../../pages/nsc993/n13271104.md) 
 
 ---
 #### 第 [ [64](./64.md) / [63](./63.md) / [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) ] 页
