--- a/indexes/nsc993/64.md
+++ b/indexes/nsc993/64.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】为质疑“抗美援朝”的罗昌平点赞](../../pages/nsc993/n13293902.md) 
 #### [【网海拾贝】制度才是最大的国情](../../pages/nsc993/n13292455.md) 
 #### [大陆教授：“爱国不需要理由”非常可疑](../../pages/nsc993/n13292404.md) 
 #### [【网海拾贝】习近平政权安全的威胁主要来自内部？](../../pages/nsc993/n13290496.md) 
@@ -29,7 +30,6 @@
 #### [发文限制堕胎 中共被斥把国人当猪对待](../../pages/nsc993/n13273979.md) 
 #### [讽刺东北限电 推友编《卖火柴的东北人》](../../pages/nsc993/n13273892.md) 
 #### [郑纯清：而今最危险的是中共](../../pages/nsc993/n13272870.md) 
-#### [理悟：感叹福州市公安局长潘东升猝死](../../pages/nsc993/n13272713.md) 
 
 ---
 #### 第 [ [64](./64.md) / [63](./63.md) / [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) ] 页
