--- a/indexes/nsc1028/56.md
+++ b/indexes/nsc1028/56.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [中国佛教史上最大法难——中共毁灭佛教](../../pages/nsc1028/n13281397.md) 
 #### [王友群：中国的功臣 中共的囚徒](../../pages/nsc1028/n13291790.md) 
 #### [林辉：“李玉和”原型文革被从六楼扔下摔死](../../pages/nsc1028/n13291564.md) 
 #### [中共罪行录之五十四：中国人失去的自由权利](../../pages/nsc1028/n13290123.md) 
@@ -29,7 +30,6 @@
 #### [无神论——人类面临的最危险骗局](../../pages/nsc1028/n13196137.md) 
 #### [袁斌：我们从小到大学到的历史哪些是假的（6）](../../pages/nsc1028/n13221126.md) 
 #### [中共罪行录之五十：同仁堂的故事](../../pages/nsc1028/n13218798.md) 
-#### [中共罪行录之四十九：川大最后一个“右派”](../../pages/nsc1028/n13216206.md) 
 
 ---
 #### 第 [ [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) ] 页
